Fix multiple bugs: inline code removal, dashboard cleanup, admin login check, mobile touch improvements
- Created recaptcha.js and moved inline reCAPTCHA scripts from all HTML files
- Moved dashboard.html inline styles (~400 lines) to styles.css
- Updated dashboard header and footer to match index.html structure
- Added admin account detection in auth.js - redirects admins to admin.html
- Added mobile touch improvements (tap-highlight, touch-action, min tap targets)
- Fixed dashboard header auth buttons to use hidden attribute consistently
- Removed duplicate logoutBtn from dashboard user dropdown

--- a/cart.html
+++ b/cart.html
@@ -948,33 +948,12 @@
     <!-- Paystack -->
     <script src="https://js.paystack.co/v1/inline.js"></script>
 
+    <script src="assets/js/recaptcha.js"></script>
     <script
       src="https://www.google.com/recaptcha/api.js?onload=onRecaptchaLoad&render=explicit"
       async
       defer
     ></script>
-    <script>
-      // reCAPTCHA initialization callback
-      function onRecaptchaLoad() {
-        const loginRecaptcha = document.getElementById("loginRecaptcha");
-        const signupRecaptcha = document.getElementById("signupRecaptcha");
-
-        if (loginRecaptcha) {
-          window.loginRecaptchaWidgetId = grecaptcha.render("loginRecaptcha", {
-            sitekey: "6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI",
-          });
-        }
-
-        if (signupRecaptcha) {
-          window.signupRecaptchaWidgetId = grecaptcha.render(
-            "signupRecaptcha",
-            {
-              sitekey: "6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI",
-            },
-          );
-        }
-      }
-    </script>
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"
