--- a/dashboard.html
+++ b/dashboard.html
@@ -15,433 +15,27 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&family=Playfair+Display:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/css/styles.css" />
-    <style>
-      /* Dashboard Specific Styles */
-      .dashboard-page {
-        min-height: 100vh;
-        padding-top: 120px;
-        padding-bottom: 4rem;
-      }
-
-      .dashboard-container {
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 0 1.5rem;
-      }
-
-      .dashboard-header {
-        text-align: center;
-        margin-bottom: 3rem;
-      }
-
-      .dashboard-welcome {
-        font-family: var(--font-display);
-        font-size: 2rem;
-        font-weight: 600;
-        color: var(--text);
-        margin-bottom: 0.5rem;
-      }
-
-      .dashboard-email {
-        color: var(--text-muted);
-        font-size: 0.95rem;
-      }
-
-      .dashboard-grid {
-        display: grid;
-        grid-template-columns: 280px 1fr;
-        gap: 2rem;
-      }
-
-      /* Sidebar */
-      .dashboard-sidebar {
-        background: var(--bg-card);
-        border-radius: 16px;
-        padding: 1.5rem;
-        height: fit-content;
-        position: sticky;
-        top: 100px;
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
-      }
-
-      .dashboard-nav {
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
-      }
-
-      .dashboard-nav-item {
-        display: flex;
-        align-items: center;
-        gap: 0.75rem;
-        padding: 0.875rem 1rem;
-        border-radius: 10px;
-        color: var(--text);
-        text-decoration: none;
-        font-weight: 500;
-        font-size: 0.9rem;
-        transition: all 0.2s ease;
-        border: none;
-        background: transparent;
-        cursor: pointer;
-        width: 100%;
-        text-align: left;
-      }
-
-      .dashboard-nav-item:hover {
-        background: var(--bg-soft);
-      }
-
-      .dashboard-nav-item.active {
-        background: var(--primary);
-        color: #fff;
-      }
-
-      .dashboard-nav-item i {
-        width: 20px;
-        text-align: center;
-      }
-
-      .dashboard-nav-divider {
-        height: 1px;
-        background: var(--border);
-        margin: 0.75rem 0;
-      }
-
-      .dashboard-nav-item.logout {
-        color: #e74c3c;
-      }
-
-      .dashboard-nav-item.logout:hover {
-        background: rgba(231, 76, 60, 0.1);
-      }
-
-      /* Main Content */
-      .dashboard-content {
-        background: var(--bg-card);
-        border-radius: 16px;
-        padding: 2rem;
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
-      }
-
-      .dashboard-section {
-        display: none;
-      }
-
-      .dashboard-section.active {
-        display: block;
-      }
-
-      .dashboard-section-title {
-        font-family: var(--font-display);
-        font-size: 1.5rem;
-        font-weight: 600;
-        color: var(--text);
-        margin-bottom: 1.5rem;
-        padding-bottom: 1rem;
-        border-bottom: 2px solid var(--border);
-      }
-
-      /* Overview Cards */
-      .overview-cards {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-        gap: 1rem;
-        margin-bottom: 2rem;
-      }
-
-      .overview-card {
-        background: linear-gradient(135deg, var(--primary) 0%, #d68d9c 100%);
-        border-radius: 12px;
-        padding: 1.25rem;
-        color: #fff;
-        text-decoration: none;
-        transition: transform 0.2s ease;
-      }
-
-      .overview-card:hover {
-        transform: translateY(-4px);
-      }
-
-      .overview-card-icon {
-        width: 40px;
-        height: 40px;
-        background: rgba(255, 255, 255, 0.2);
-        border-radius: 10px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 0.75rem;
-      }
-
-      .overview-card-value {
-        font-size: 1.75rem;
-        font-weight: 700;
-        margin-bottom: 0.25rem;
-      }
-
-      .overview-card-label {
-        font-size: 0.85rem;
-        opacity: 0.9;
-      }
-
-      /* Orders Table */
-      .orders-table {
-        width: 100%;
-        border-collapse: collapse;
-      }
-
-      .orders-table th,
-      .orders-table td {
-        padding: 1rem;
-        text-align: left;
-        border-bottom: 1px solid var(--border);
-      }
-
-      .orders-table th {
-        font-weight: 600;
-        color: var(--text-muted);
-        font-size: 0.8rem;
-        text-transform: uppercase;
-        letter-spacing: 0.5px;
-      }
-
-      .orders-table tbody tr:hover {
-        background: var(--bg-soft);
-      }
-
-      .order-status {
-        display: inline-flex;
-        padding: 0.25rem 0.75rem;
-        border-radius: 20px;
-        font-size: 0.75rem;
-        font-weight: 600;
-        text-transform: uppercase;
-      }
-
-      .order-status.pending {
-        background: rgba(243, 156, 18, 0.15);
-        color: #f39c12;
-      }
-
-      .order-status.processing {
-        background: rgba(52, 152, 219, 0.15);
-        color: #3498db;
-      }
-
-      .order-status.shipped {
-        background: rgba(155, 89, 182, 0.15);
-        color: #9b59b6;
-      }
-
-      .order-status.delivered {
-        background: rgba(39, 174, 96, 0.15);
-        color: #27ae60;
-      }
-
-      .order-status.cancelled {
-        background: rgba(231, 76, 60, 0.15);
-        color: #e74c3c;
-      }
-
-      .order-view-btn {
-        background: var(--bg-soft);
-        border: none;
-        padding: 0.5rem 1rem;
-        border-radius: 8px;
-        font-size: 0.85rem;
-        font-weight: 500;
-        color: var(--text);
-        cursor: pointer;
-        transition: all 0.2s ease;
-      }
-
-      .order-view-btn:hover {
-        background: var(--primary);
-        color: #fff;
-      }
-
-      /* Profile Form */
-      .profile-form {
-        max-width: 500px;
-      }
-
-      .profile-field {
-        margin-bottom: 1.5rem;
-      }
-
-      .profile-field label {
-        display: block;
-        font-weight: 600;
-        font-size: 0.85rem;
-        color: var(--text);
-        margin-bottom: 0.5rem;
-        text-transform: uppercase;
-        letter-spacing: 0.5px;
-      }
-
-      .profile-field input {
-        width: 100%;
-        padding: 0.875rem 1rem;
-        border: 2px solid var(--border);
-        border-radius: 10px;
-        font-size: 0.95rem;
-        background: var(--bg);
-        color: var(--text);
-        transition: all 0.2s ease;
-      }
-
-      .profile-field input:focus {
-        outline: none;
-        border-color: var(--primary);
-      }
-
-      .profile-field input:disabled {
-        background: var(--bg-soft);
-        cursor: not-allowed;
-      }
-
-      .profile-actions {
-        display: flex;
-        gap: 1rem;
-        margin-top: 2rem;
-      }
-
-      /* Empty State */
-      .empty-state {
-        text-align: center;
-        padding: 3rem 2rem;
-      }
-
-      .empty-state-icon {
-        width: 80px;
-        height: 80px;
-        background: var(--bg-soft);
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 0 auto 1.5rem;
-        font-size: 2rem;
-        color: var(--text-muted);
-      }
-
-      .empty-state-title {
-        font-family: var(--font-display);
-        font-size: 1.25rem;
-        font-weight: 600;
-        margin-bottom: 0.5rem;
-      }
-
-      .empty-state-text {
-        color: var(--text-muted);
-        margin-bottom: 1.5rem;
-      }
-
-      /* Not Logged In State */
-      .not-logged-in {
-        text-align: center;
-        padding: 4rem 2rem;
-      }
-
-      .not-logged-in-icon {
-        width: 100px;
-        height: 100px;
-        background: var(--bg-soft);
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 0 auto 1.5rem;
-        font-size: 2.5rem;
-        color: var(--primary);
-      }
-
-      .not-logged-in h2 {
-        font-family: var(--font-display);
-        font-size: 1.75rem;
-        margin-bottom: 0.75rem;
-      }
-
-      .not-logged-in p {
-        color: var(--text-muted);
-        margin-bottom: 2rem;
-        max-width: 400px;
-        margin-left: auto;
-        margin-right: auto;
-      }
-
-      /* Mobile Responsive */
-      @media (max-width: 768px) {
-        .dashboard-page {
-          padding-top: 100px;
-        }
-
-        .dashboard-grid {
-          grid-template-columns: 1fr;
-        }
-
-        .dashboard-sidebar {
-          position: static;
-          padding: 1rem;
-        }
-
-        .dashboard-nav {
-          flex-direction: row;
-          overflow-x: auto;
-          gap: 0.25rem;
-          padding-bottom: 0.5rem;
-        }
-
-        .dashboard-nav-item {
-          white-space: nowrap;
-          padding: 0.75rem 1rem;
-          flex-shrink: 0;
-        }
-
-        .dashboard-nav-item span {
-          display: none;
-        }
-
-        .dashboard-nav-item i {
-          margin-right: 0;
-        }
-
-        .dashboard-nav-divider {
-          display: none;
-        }
-
-        .dashboard-content {
-          padding: 1.25rem;
-        }
-
-        .orders-table {
-          font-size: 0.85rem;
-        }
-
-        .orders-table th,
-        .orders-table td {
-          padding: 0.75rem 0.5rem;
-        }
-      }
-    </style>
   </head>
-  <body>
+  <body class="lbs-page">
     <!-- Header -->
-    <header class="lbs-header" id="mainHeader">
+    <header class="lbs-header" id="siteHeader">
       <div class="header-container">
-        <a href="index.html" class="header-logo">
-          <span class="logo-text">Lingerie by Sisioyin</span>
+        <a href="index.html" class="header-brand">
+          <span class="brand-logo"><i class="fa-solid fa-heart"></i></span>
+          <span class="brand-name">Lingerie by Sisioyin</span>
         </a>
 
-        <nav class="header-nav" id="mainNav">
+        <nav class="header-nav" id="headerNav">
           <a href="index.html" class="nav-link">Home</a>
           <a href="shop.html" class="nav-link">Shop</a>
-          <a href="wishlist.html" class="nav-link">Wishlist</a>
+          <a href="shop.html?category=Lingerie" class="nav-link">Lingerie</a>
+          <a href="shop.html?category=Loungewear" class="nav-link"
+            >Loungewear</a
+          >
         </nav>
 
         <div class="header-actions">
@@ -466,11 +60,11 @@
             type="button"
             class="header-btn"
             id="userMenuBtn"
-            aria-label="Account"
+            aria-label="My Account"
             title="My Account"
             hidden
           >
-            <span class="user-avatar">U</span>
+            <i class="fa-solid fa-user-check"></i>
           </button>
           <button
             type="button"
@@ -482,6 +76,10 @@
           >
             <i class="fa-solid fa-sign-out-alt"></i>
           </button>
+          <a href="wishlist.html" class="header-btn" aria-label="Wishlist">
+            <i class="fa-solid fa-heart"></i>
+            <span class="wishlist-count" id="wishlistCount">0</span>
+          </a>
           <button
             type="button"
             class="header-btn cart-toggle"
@@ -489,12 +87,12 @@
             aria-label="Cart"
           >
             <i class="fa-solid fa-bag-shopping"></i>
-            <span class="cart-badge" id="cartBadge">0</span>
+            <span class="cart-count" id="cartCount">0</span>
           </button>
           <button
             type="button"
-            class="header-btn mobile-toggle"
-            id="mobileMenuToggle"
+            class="mobile-toggle"
+            id="mobileToggle"
             aria-label="Menu"
           >
             <i class="fa-solid fa-bars"></i>
@@ -502,6 +100,22 @@
         </div>
       </div>
     </header>
+
+    <!-- Mobile Navigation -->
+    <nav class="mobile-nav" id="mobileNav">
+      <div class="mobile-nav-content">
+        <a href="index.html" class="mobile-nav-link">Home</a>
+        <a href="shop.html" class="mobile-nav-link">Shop All</a>
+        <a href="shop.html?category=Lingerie" class="mobile-nav-link"
+          >Lingerie</a
+        >
+        <a href="shop.html?category=Loungewear" class="mobile-nav-link"
+          >Loungewear</a
+        >
+        <a href="wishlist.html" class="mobile-nav-link">Wishlist</a>
+        <a href="dashboard.html" class="mobile-nav-link active">My Account</a>
+      </div>
+    </nav>
 
     <!-- Main Content -->
     <main class="dashboard-page">
@@ -700,27 +314,25 @@
     <!-- Footer -->
     <footer class="site-footer">
       <div class="footer-container">
-        <div class="footer-grid">
+        <div class="footer-main">
           <div class="footer-brand">
-            <a href="index.html" class="footer-logo">Lingerie by Sisioyin</a>
+            <a href="index.html" class="footer-logo">
+              <span class="brand-logo"><i class="fa-solid fa-heart"></i></span>
+              <span class="brand-name">Lingerie by Sisioyin</span>
+            </a>
             <p class="footer-tagline">
-              Premium lingerie crafted for comfort and confidence.
+              Luxe essentials defined by comfort and confidence.
             </p>
             <div class="footer-social">
-              <a
-                href="https://instagram.com/lingeriebysisioyin"
-                target="_blank"
-                aria-label="Instagram"
-              >
-                <i class="fa-brands fa-instagram"></i>
-              </a>
-              <a
-                href="https://wa.me/2349033344860"
-                target="_blank"
-                aria-label="WhatsApp"
-              >
-                <i class="fa-brands fa-whatsapp"></i>
-              </a>
+              <a href="#" class="social-link" aria-label="Instagram"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a href="#" class="social-link" aria-label="TikTok"
+                ><i class="fa-brands fa-tiktok"></i
+              ></a>
+              <a href="#" class="social-link" aria-label="WhatsApp"
+                ><i class="fa-brands fa-whatsapp"></i
+              ></a>
             </div>
           </div>
 
@@ -738,7 +350,9 @@
           <div class="footer-links-group">
             <h4 class="footer-heading">Help</h4>
             <nav class="footer-links">
+              <a href="dashboard.html">My Account</a>
               <a href="faq.html">FAQs</a>
+              <a href="#" data-open-size-guide id="openSizeGuide">Size Guide</a>
               <a href="terms.html">Terms of Service</a>
               <a href="privacy.html">Privacy Policy</a>
               <a href="https://wa.me/2349033344860" target="_blank"
@@ -804,6 +418,51 @@
         </div>
       </div>
     </footer>
+
+    <!-- WhatsApp Live Chat Widget -->
+    <div class="whatsapp-widget" id="whatsappWidget">
+      <div class="whatsapp-popup">
+        <button
+          type="button"
+          class="whatsapp-popup-close"
+          id="whatsappClose"
+          aria-label="Close"
+        >
+          <i class="fa-solid fa-xmark"></i>
+        </button>
+        <div class="whatsapp-popup-header">
+          <div class="whatsapp-popup-avatar">
+            <i class="fa-brands fa-whatsapp"></i>
+          </div>
+          <div class="whatsapp-popup-info">
+            <h4>Lingerie by Sisioyin</h4>
+            <p>Typically replies within minutes</p>
+          </div>
+        </div>
+        <div class="whatsapp-popup-body">
+          <p>
+            👋 Hi there! Need help finding the perfect lingerie? Chat with us on
+            WhatsApp!
+          </p>
+        </div>
+        <a
+          href="https://wa.me/2349033344860?text=Hi%2C%20I%27m%20interested%20in%20your%20products"
+          target="_blank"
+          class="whatsapp-popup-btn"
+        >
+          <i class="fa-brands fa-whatsapp"></i>
+          Start Chat
+        </a>
+      </div>
+      <button
+        type="button"
+        class="whatsapp-fab"
+        id="whatsappFab"
+        aria-label="Chat on WhatsApp"
+      >
+        <i class="fa-brands fa-whatsapp"></i>
+      </button>
+    </div>
 
     <!-- Cart Drawer -->
     <div class="cart-drawer" id="cartDrawer">
@@ -1014,33 +673,12 @@
       <i class="fa-brands fa-whatsapp"></i>
     </a>
 
+    <script src="assets/js/recaptcha.js"></script>
     <script
       src="https://www.google.com/recaptcha/api.js?onload=onRecaptchaLoad&render=explicit"
       async
       defer
     ></script>
-    <script>
-      // reCAPTCHA initialization callback
-      function onRecaptchaLoad() {
-        const loginRecaptcha = document.getElementById("loginRecaptcha");
-        const signupRecaptcha = document.getElementById("signupRecaptcha");
-
-        if (loginRecaptcha) {
-          window.loginRecaptchaWidgetId = grecaptcha.render("loginRecaptcha", {
-            sitekey: "6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI",
-          });
-        }
-
-        if (signupRecaptcha) {
-          window.signupRecaptchaWidgetId = grecaptcha.render(
-            "signupRecaptcha",
-            {
-              sitekey: "6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI",
-            },
-          );
-        }
-      }
-    </script>
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"
