--- a/terms.html
+++ b/terms.html
@@ -662,33 +662,12 @@
     </div>
 
     <!-- Scripts -->
+    <script src="assets/js/recaptcha.js"></script>
     <script
       src="https://www.google.com/recaptcha/api.js?onload=onRecaptchaLoad&render=explicit"
       async
       defer
     ></script>
-    <script>
-      // reCAPTCHA initialization callback
-      function onRecaptchaLoad() {
-        const loginRecaptcha = document.getElementById("loginRecaptcha");
-        const signupRecaptcha = document.getElementById("signupRecaptcha");
-
-        if (loginRecaptcha) {
-          window.loginRecaptchaWidgetId = grecaptcha.render("loginRecaptcha", {
-            sitekey: "6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI",
-          });
-        }
-
-        if (signupRecaptcha) {
-          window.signupRecaptchaWidgetId = grecaptcha.render(
-            "signupRecaptcha",
-            {
-              sitekey: "6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI",
-            },
-          );
-        }
-      }
-    </script>
     <script src="assets/js/config.js"></script>
     <script src="assets/js/supabase.js"></script>
     <script src="assets/js/utils.js"></script>
